<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="network_sys_default">System default</string>
    <string name="network_suspend">Suspend network access</string>
    <string name="hello">Secure Shell Helper</string>
    <string name="app_name">SSHelper</string>
    <string name="restart">Restart</string>
    <string name="show_hide_soft_keyboard">Show/Hide Soft Keyboard</string>
    <string name="actions">Actions:</string>
    <string name="allow_port_forwards_from_any_host">Allow port forwards from any host:</string>
    <string name="allow_sound_alerts">Allow sound alerts:</string>
    <string name="allow_voice_messages">Allow voice messages:</string>
    <string name="cancel_undo">Cancel/Undo</string>
    <string name="check_network_connectivity">Check Network connectivity:</string>
    <string name="clipboard_server_port_number">Clipboard server port number:</string>
    <string name="current_network_type">Current Network Type:</string>
    <string name="defaults">Defaults</string>
    <string name="disable_password_logins">Disable password logins:</string>
    <string name="display_ipv6_addresses">Display IPV6 addresses:</string>
    <string name="enable_zeroconf_broadcast">Enable Zeroconf broadcast:</string>
    <string name="enable_clipboard_display_server">Enable clipboard display server:</string>
    <string name="enable_log_display_server">Enable log display server:</string>
    <string name="enable_strict_modes">Enable strict modes:</string>
    <string name="log_server_port_number">Log server port number:</string>
    <string name="prevent_standby_while_running">Prevent standby while running:</string>
    <string name="restart_server_nwith_new_values">Restart server with new values</string>
    <string name="run_sshelper_service_at_boot">Run SSHelper service at boot:</string>
    <string name="ssh_server_port_number">SSH server port number:</string>
    <string name="select_data_logging_mode">Select data logging mode:</string>
    <string name="server_password">Server Password:</string>
    <string name="server_address_assigned">Server address (assigned):</string>
    <string name="show_password">Show password:</string>
    <string name="default_2222">default 2222</string>
    <string name="default_8080">default 8080</string>
    <string name="default_8081">default 8081</string>
    <string name="default_admin">default=admin</string>
    <string name="restart_server_with_new_values">Restart server with new values</string>
    <string name="restart_server">Restart Server</string>
    <string name="help">Help</string>
    <string name="sshelper">SSHelper</string>
    <string name="server">Server</string>
    <string name="network">Network</string>

</resources>
