<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.arachnoid.sshelper.PlaceHolderFragment">

    <ScrollView
        android:id="@+id/config_view"
        android:background="@color/black"
        android:padding="4dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:fillViewport="true"
                android:typeface="monospace">

                <!-- App version, copyright -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12sp">

                    <TextView
                        android:id="@+id/app_id_key"
                        style="@style/TextFieldStyle.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <TextView
                        android:id="@+id/app_id_value"
                        style="@style/TextFieldStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </TableRow>

                <!-- Option entry text fields -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/current_network_type"/>

                    <TextView
                        android:id="@+id/network_type"
                        style="@style/TextFieldStyle"
                        android:text=""/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="Device name"/>

                    <TextView
                        android:id="@+id/device_name"
                        style="@style/TextFieldStyle"
                        android:text=""/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/server_address_assigned"/>

                    <TextView
                        android:id="@+id/server_address"
                        style="@style/TextFieldStyle"
                        android:text=""/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/ssh_server_port_number"/>

                    <EditText
                        android:id="@+id/ssh_port_number"
                        style="@style/EntryField"
                        android:layout_margin="1px"
                        android:background="@color/input_color"
                        android:digits="0123456789"
                        android:hint="@string/default_2222"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:padding="4px"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/log_server_port_number"/>

                    <EditText
                        android:id="@+id/log_port_number"
                        style="@style/EntryField"
                        android:layout_margin="1px"
                        android:background="@color/input_color"
                        android:digits="0123456789"
                        android:hint="@string/default_8080"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:numeric="decimal"
                        android:padding="4px"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/clipboard_server_port_number"/>

                    <EditText
                        android:id="@+id/clipboard_port_number"
                        style="@style/EntryField"
                        android:layout_margin="1px"
                        android:background="@color/input_color"
                        android:digits="0123456789"
                        android:hint="@string/default_8081"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:padding="4px"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/server_password"/>

                    <EditText
                        android:id="@+id/server_password"
                        style="@style/EntryField"
                        android:layout_margin="1px"
                        android:background="@color/input_color"
                        android:hint="@string/default_admin"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="4px"/>
                </TableRow>

                <!-- Checkboxes -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12sp">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/disable_password_logins"/>

                    <CheckBox
                        android:id="@+id/disable_passwords"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/enable_strict_modes"/>

                    <CheckBox
                        android:id="@+id/enable_strict"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/allow_port_forwards_from_any_host"/>

                    <CheckBox
                        android:id="@+id/allow_forwarding"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/run_sshelper_service_at_boot"/>

                    <CheckBox
                        android:id="@+id/run_at_start"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/check_network_connectivity"/>

                    <CheckBox
                        android:id="@+id/check_network"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/display_ipv6_addresses"/>

                    <CheckBox
                        android:id="@+id/display_ipv6"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="Enable file writing"/>

                    <CheckBox
                        android:id="@+id/enable_file_writing"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/enable_zeroconf_broadcast"/>

                    <CheckBox
                        android:id="@+id/enable_zeroconf"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/enable_log_display_server"/>

                    <CheckBox
                        android:id="@+id/enable_log_server"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/enable_clipboard_display_server"/>

                    <CheckBox
                        android:id="@+id/enable_clipboard_server"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/prevent_standby_while_running"/>

                    <CheckBox
                        android:id="@+id/prevent_standby"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/select_data_logging_mode"/>

                    <Spinner
                        android:id="@+id/log_spinner"
                        style="@style/SpinnerStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/allow_sound_alerts"/>

                    <CheckBox
                        android:id="@+id/allow_sound_alerts"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/allow_voice_messages"/>

                    <CheckBox
                        android:id="@+id/allow_voice_messages"
                        style="@style/CheckBoxStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/show_password"/>

                    <CheckBox
                        android:id="@+id/show_passwords"
                        style="@style/CheckBoxStyle"/>
                </TableRow>


                <!-- Buttons -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12sp">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text="@string/actions"/>

                    <Button
                        android:onClick="cancelButton"
                        android:text="@string/cancel_undo"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text=""/>

                    <Button
                        android:onClick="defaultsButton"
                        android:text="Set Defaults"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text=""/>

                    <Button
                        android:onClick="restartServerButton"
                        android:text="@string/restart_server_with_new_values"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFieldStyle.Label"
                        android:text=""/>

                    <Button
                        android:onClick="reinstallFiles"
                        android:text="Reinstall SSHelper files"
                        />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</RelativeLayout>
