<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/main_menu"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SSHelperActivity">

    <item android:id="@+id/restart_server" android:icon="@drawable/ic_menu_refresh"
          android:title="@string/restart_server" style="@style/MenuItemStyle"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/show_help" android:icon="@android:drawable/ic_menu_help"
          android:title="@string/help" style="@style/MenuItemStyle"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/toggle_keyboard" android:icon="@drawable/ic_menu_today"
          style="@style/MenuItemStyle"
          app:showAsAction="ifRoom"
          android:title="@string/show_hide_soft_keyboard" />

    <item android:id="@+id/stop_and_quit"
          android:icon="@drawable/ic_menu_close_clear_cancel"
          style="@style/MenuItemStyle"
          android:title="Stop server and quit" />

</menu>
